[gd_scene load_steps=13 format=3 uid="uid://dwqxjclbs43m"]

[ext_resource type="FontFile" uid="uid://ccvk0qw2cv67s" path="res://fonts/Volt5x5.ttf" id="1_3abb1"]
[ext_resource type="Script" path="res://scripts/control.gd" id="1_p4ydt"]
[ext_resource type="Texture2D" uid="uid://bdw4kqayn1xa6" path="res://assets/kenney_pixel-ui-pack/9-Slice/space.png" id="2_h2uu2"]
[ext_resource type="FontFile" uid="uid://dsi7o2aoknly3" path="res://fonts/pixelfy/Pixelfy.ttf" id="2_u02s4"]
[ext_resource type="Texture2D" uid="uid://c4bpfh6vdxc2j" path="res://assets/kenney_pixel-ui-pack/9-Slice/Ancient/tan_pressed.png" id="3_tb7i6"]
[ext_resource type="Script" path="res://scripts/soundsAudio.gd" id="6_eraah"]
[ext_resource type="Texture2D" uid="uid://dd8dg0qo17231" path="res://assets/latest.png" id="6_us5p0"]
[ext_resource type="AudioStream" uid="uid://denfwm7kr0aos" path="res://sounds/button press.mp3" id="8_udyeh"]
[ext_resource type="PackedScene" uid="uid://c51ieggojeddq" path="res://scenes/Scores.tscn" id="9_5geoo"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_33wgt"]
size = Vector2(49, 49)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_giegk"]
size = Vector2(49, 49)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a63ev"]
size = Vector2(49, 49)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_p4ydt")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0705882, 0.541176, 0.956863, 0.34902)

[node name="Rage Sailors" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 122.0
offset_top = 206.0
offset_right = 1013.0
offset_bottom = 515.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_u02s4")
theme_override_font_sizes/font_size = 100
text = "Rage Sailors"

[node name="Rage" type="Label" parent="ColorRect"]
modulate = Color(0.74902, 0.0941176, 0.0862745, 1)
layout_mode = 0
offset_left = 115.0
offset_top = 210.0
offset_right = 1006.0
offset_bottom = 333.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_u02s4")
theme_override_font_sizes/font_size = 100
text = "Rage"

[node name="start" type="TouchScreenButton" parent="ColorRect"]
position = Vector2(311, 812)
scale = Vector2(8.9375, 3.39583)
texture_normal = ExtResource("2_h2uu2")
texture_pressed = ExtResource("3_tb7i6")
shape = SubResource("RectangleShape2D_33wgt")

[node name="startLabel" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 449.0
offset_top = 812.0
offset_right = 591.0
offset_bottom = 934.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_3abb1")
theme_override_font_sizes/font_size = 150
text = "play"

[node name="exit" type="TouchScreenButton" parent="ColorRect"]
position = Vector2(573, 1420)
scale = Vector2(6.375, 2.3125)
texture_normal = ExtResource("2_h2uu2")
texture_pressed = ExtResource("3_tb7i6")
shape = SubResource("RectangleShape2D_giegk")

[node name="exitLabel" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 668.0
offset_top = 1398.0
offset_right = 801.0
offset_bottom = 1520.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_3abb1")
theme_override_font_sizes/font_size = 150
text = "exit"

[node name="options" type="TouchScreenButton" parent="ColorRect"]
position = Vector2(29, 1418)
scale = Vector2(3.6875, 2.27083)
texture_normal = ExtResource("2_h2uu2")
texture_pressed = ExtResource("3_tb7i6")
shape = SubResource("RectangleShape2D_a63ev")

[node name="skins" type="TouchScreenButton" parent="ColorRect"]
position = Vector2(113, 813)
scale = Vector2(3.72917, 3.39583)
texture_normal = ExtResource("2_h2uu2")
texture_pressed = ExtResource("3_tb7i6")
shape = SubResource("RectangleShape2D_a63ev")

[node name="skinsLabel" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 133.0
offset_top = 836.0
offset_right = 323.0
offset_bottom = 958.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_3abb1")
theme_override_font_sizes/font_size = 110
text = "boats"

[node name="maps" type="TouchScreenButton" parent="ColorRect"]
position = Vector2(429, 994)
scale = Vector2(6.47917, 2.27083)
texture_normal = ExtResource("2_h2uu2")
texture_pressed = ExtResource("3_tb7i6")
shape = SubResource("RectangleShape2D_a63ev")

[node name="mapsLabel" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 502.0
offset_top = 968.0
offset_right = 672.0
offset_bottom = 1090.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_3abb1")
theme_override_font_sizes/font_size = 150
text = "Maps"

[node name="stay" type="Label" parent="ColorRect"]
modulate = Color(0.815686, 0.482353, 0.352941, 1)
layout_mode = 0
offset_left = 182.0
offset_top = 1085.0
offset_right = 1159.0
offset_bottom = 1281.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_3abb1")
theme_override_font_sizes/font_size = 120
text = "! The Game is
 still in development !"

[node name="stay2" type="Label" parent="ColorRect"]
modulate = Color(1, 0.737255, 0.203922, 1)
layout_mode = 0
offset_left = 224.0
offset_top = 1265.0
offset_right = 1069.0
offset_bottom = 1431.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_u02s4")
theme_override_font_sizes/font_size = 80
text = "! stay tuned !"

[node name="sounds" type="Node" parent="ColorRect"]
script = ExtResource("6_eraah")

[node name="buttonAudio" type="AudioStreamPlayer" parent="ColorRect/sounds"]
stream = ExtResource("8_udyeh")
autoplay = true

[node name="buttonMenuAudio" type="AudioStreamPlayer" parent="ColorRect/sounds"]
stream = ExtResource("8_udyeh")

[node name="Latest" type="Sprite2D" parent="."]
position = Vector2(113, 1470)
scale = Vector2(0.1105, 0.0847618)
texture = ExtResource("6_us5p0")

[node name="HUDScoreCoins" parent="." instance=ExtResource("9_5geoo")]
layout_mode = 1

[connection signal="pressed" from="ColorRect/start" to="ColorRect/sounds" method="_on_start_pressed"]
[connection signal="released" from="ColorRect/start" to="." method="_on_start_released"]
[connection signal="released" from="ColorRect/exit" to="." method="_on_exit_released"]
[connection signal="pressed" from="ColorRect/options" to="ColorRect/sounds" method="_on_options_pressed"]
[connection signal="released" from="ColorRect/options" to="." method="_on_options_released"]
[connection signal="pressed" from="ColorRect/skins" to="ColorRect/sounds" method="_on_skins_pressed"]
[connection signal="released" from="ColorRect/skins" to="." method="_on_skins_released"]
[connection signal="pressed" from="ColorRect/maps" to="ColorRect/sounds" method="_on_maps_pressed"]
[connection signal="released" from="ColorRect/maps" to="." method="_on_maps_released"]
